[project]
name = "llm-mcts-inference"
version = "0.1.0"
description = "An experimental project using Monte Carlo Tree Search (MCTS) to refine LLM responses for better accuracy and decision-making."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.1",
    "openai>=1.59.6",
    "outlines>=0.1.11",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
]
