[project]
name = "llm-mcts-inference"
version = "0.1.2"
description = "An experimental project using Monte Carlo Tree Search (MCTS) to refine LLM responses for better accuracy and decision-making."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.20.3",
    "instructor>=1.7.2",
    "litellm>=1.59.0",
    "numpy>=2.2.1",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = ["mypy>=1.14.1", "pytest>=8.3.4"]

[tool.ruff]
lint.select = ["E", "F"]
lint.per-file-ignores = { "__init__.py" = ["F401"] }
line-length = 100


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
